2014-11-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Move preferences handling from scanner to libraries because
	we need to access it from some modules there directly while
	at the same time getting rid of storing preferences pointer
	in the arglists.

	* src/preferences.c, src/preferences.h: Removed.

	* src/CMakeLists.txt: Removed handling of module preferences.

	* src/pluginlaunch.c, src/pluginload.c, src/utils.c,
	src/plugs_req.c, src/comm.c, src/nasl_plugins.c, src/ntp.c,
	src/openvassd.c, src/attack.c: Adjust include to new prefs.h.

	* COPYING: Remove module preferences.

2014-11-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/preferences.c (struct openvassd_option, openvassd_defaults):
	Removed. Moved to openvassd.c.
	(prefs_init): Removed handling of options. Moved handling of config
	into prefs_config().
	(prefs_config): New. The config file settings from prefs_init.

	* src/preferences.h: Adapt protos accordingly.

	* src/openvassd.c (struct openvassd_option, openvassd_defaults): New.
	Moved here from preferences.c.
	(reload_openvassd, init_openvassd): Adapt to split of prefs_init and
	prefs_config and set the options in its own.

2014-11-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/preferences.c (preferences_set): Removed unneeded function.

	* src/preferences.h: Removed proto accordingly.

2014-11-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginlaunch.c (plugin_launch): Get global preferences directly
	and therefore drop the argument "preferences".

	* src/pluginlaunch.h: Adjust proto accordingly.

	* src/pluginload.c (plugins_reload_from_dir): Adapt to new proto of
	nasl_plugin_add.
 
	* src/pluginload.h: Adjust proto accodingly.

	* src/plugs_req.c (get_closed_ports, get_closed_udp_ports): Get global
	preferences directly and therefore drop the argument "preferences".
	(requirements_plugin): Adapt to changed protos and therefore drop the
	argument "preferences".
